--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,9 +25,10 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
-file.reference.LogTrack.jar=../../Downloads/LogTrack.jar
-file.reference.mysql-connector-j-9.4.0.jar=../../Downloads/mysql-connector-j-9.4.0.jar
+file.reference.LogTrack.jar-1=../../Documentos/SistemaPedidos/libs/LogTrack.jar
+file.reference.mysql-connector-j-9.4.0.jar-1=../../Documentos/SistemaPedidos/libs/mysql-connector-j-9.4.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -37,8 +38,8 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.LogTrack.jar}:\
-    ${file.reference.mysql-connector-j-9.4.0.jar}
+    ${file.reference.LogTrack.jar-1}:\
+    ${file.reference.mysql-connector-j-9.4.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -65,7 +66,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
