--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=/home/aluno/snap/netbeans/134/tomcat101.properties
-j2ee.server.home=/home/aluno/Documentos/apache-tomcat-10.1.44
-j2ee.server.instance=tomcat101:home=/home/aluno/Documentos/apache-tomcat-10.1.44
+deploy.ant.properties.file=C:\\Users\\silvi\\AppData\\Roaming\\NetBeans\\25\\tomcat101.properties
+j2ee.server.home=C:/Users/silvi/OneDrive/\u00c1rea de Trabalho/apache-tomcat-10.1.44/apache-tomcat-10.1.44
+j2ee.server.instance=tomcat101:home=C:\\Users\\silvi\\OneDrive\\\u00c1rea de Trabalho\\apache-tomcat-10.1.44\\apache-tomcat-10.1.44
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
-user.properties.file=/home/aluno/snap/netbeans/134/build.properties
+selected.browser=Chrome
+user.properties.file=C:\\Users\\silvi\\AppData\\Roaming\\NetBeans\\25\\build.properties
