Correções e CRUD de Clientes

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,5 +3,5 @@ j2ee.server.home=C:/Users/silvi/OneDrive/\u00c1rea de Trabalho/apache-tomcat-10.
 j2ee.server.instance=tomcat101:home=C:\\Users\\silvi\\OneDrive\\\u00c1rea de Trabalho\\apache-tomcat-10.1.44\\apache-tomcat-10.1.44
 javac.debug=true
 javadoc.preview=true
-selected.browser=Chrome
+selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\silvi\\AppData\\Roaming\\NetBeans\\25\\build.properties
